--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -33,14 +33,14 @@
 
     <Button
         android:id="@+id/btn_login"
-        android:layout_width="171dp"
-        android:layout_height="70dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_below="@+id/et_password"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
         android:layout_marginStart="149dp"
         android:layout_marginTop="49dp"
-        android:layout_marginEnd="153dp"
+        android:layout_marginEnd="140dp"
         android:text="Login"
         android:textSize="18dp" />
 </RelativeLayout>
