--- a/app/src/main/res/layout/pengguna_row.xml
+++ b/app/src/main/res/layout/pengguna_row.xml
@@ -59,12 +59,31 @@
                 app:layout_constraintStart_toStartOf="@+id/tv_namaPengguna"
                 app:layout_constraintTop_toBottomOf="@+id/tv_namaPengguna" />
 
+            <TextView
+                android:id="@+id/pembatas"
+                android:layout_width="5dp"
+                android:layout_height="16dp"
+                android:layout_marginStart="4dp"
+                android:text="|"
+                app:layout_constraintEnd_toStartOf="@+id/tv_status"
+                app:layout_constraintStart_toEndOf="@+id/tv_role"
+                app:layout_constraintTop_toBottomOf="@+id/tv_namaPengguna" />
+
+            <TextView
+                android:id="@+id/tv_status"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="4dp"
+                android:text="Status"
+                app:layout_constraintStart_toEndOf="@+id/pembatas"
+                app:layout_constraintTop_toBottomOf="@+id/tv_namaPengguna" />
+
             <Button
-                android:id="@+id/btn_update"
+                android:id="@+id/btn_edit"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="4dp"
-                android:text="Update"
+                android:text="Edit"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.941"
                 app:layout_constraintStart_toEndOf="@+id/tv_namaPengguna"
