--- a/app/src/main/res/layout/activity_crudrole.xml
+++ b/app/src/main/res/layout/activity_crudrole.xml
@@ -7,7 +7,7 @@
     tools:context=".CRUDRoleActivity">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerView"
+        android:id="@+id/recyclerViewRoles"
         android:paddingTop="?attr/actionBarSize"
         android:layout_width="409dp"
         android:layout_height="729dp"
