masih gabisa nampilin list role

--- a/app/src/main/res/layout/activity_add_role.xml
+++ b/app/src/main/res/layout/activity_add_role.xml
@@ -28,10 +28,10 @@
         android:spinnerMode="dropdown"/>
 
     <Button
-        android:id="@+id/btn_save"
+        android:id="@+id/btn_add"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:text="Simpan" />
+        android:text="Tambah Role" />
 
 </LinearLayout>
