--- a/app/src/main/res/layout/item_role.xml
+++ b/app/src/main/res/layout/item_role.xml
@@ -56,7 +56,7 @@
                 android:id="@+id/btnEdit"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/baseline_edit_24"
+                android:src="@drawable/icon_edit"
                 app:layout_constraintEnd_toStartOf="@+id/btnDelete"
                 app:layout_constraintTop_toTopOf="parent"/>
 
@@ -66,7 +66,7 @@
                 android:id="@+id/btnDelete"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/baseline_delete_24"
+                android:src="@drawable/icon_delete"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"/>
 
