--- a/app/src/main/res/layout/activity_data_warung.xml
+++ b/app/src/main/res/layout/activity_data_warung.xml
@@ -6,4 +6,14 @@
     android:layout_height="match_parent"
     tools:context=".DataWarungActivity">
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerViewWarung"
+        android:paddingTop="?attr/actionBarSize"
+        android:layout_width="409dp"
+        android:layout_height="729dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
