--- a/app/src/main/res/layout/activity_add_transaksi.xml
+++ b/app/src/main/res/layout/activity_add_transaksi.xml
@@ -10,107 +10,226 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:padding="16dp"
         tools:context=".AddTransaksiActivity">
 
-        <EditText
-            android:id="@+id/et_idTransaksi"
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="match_parent"
+            android:layout_height="55dp"
+            android:text="Transaksi"
+            style="@style/Header"
+            android:padding="@dimen/activity_vertical_margin"
+            android:background="@color/kuning" />
+
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="ID Transaksi"
-            android:inputType="text" />
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginBottom="30dp" >
 
-        <EditText
-            android:id="@+id/et_tanggal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Waktu"
-            android:inputType="text" />
+            <ImageView
+                android:id="@+id/imageView3"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:srcCompat="@drawable/transaksi" />
 
-        <EditText
-            android:id="@+id/et_waktu"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Waktu"
-            android:inputType="text" />
+            <TextView
+                android:id="@+id/textView3"
+                style="@style/Header"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Input Transaction"
+                android:layout_marginLeft="5dp"
+                app:layout_constraintStart_toEndOf="@+id/imageView3"
+                app:layout_constraintTop_toTopOf="parent" />
 
-        <Spinner
-            android:id="@+id/spinner_shift"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@android:drawable/btn_dropdown"
-            android:spinnerMode="dropdown"/>
+            <EditText
+                android:id="@+id/et_idTransaksi"
+                style="@style/Text_Login"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="ID Transaksi"
+                android:inputType="text"
+                app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
-        <EditText
-            android:id="@+id/et_idpengguna"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="ID Pengguna"
-            android:inputType="textPassword" />
+            <EditText
+                android:id="@+id/et_tanggal"
+                style="@style/Text_Login"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Waktu"
+                android:inputType="text"
+                app:layout_constraintTop_toBottomOf="@+id/et_idTransaksi" />
 
-        <EditText
-            android:id="@+id/et_idpelanggan"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="ID Pelanggan"
-            android:inputType="text" />
+            <EditText
+                android:id="@+id/et_waktu"
+                style="@style/Text_Login"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Waktu"
+                android:inputType="text"
+                app:layout_constraintTop_toBottomOf="@+id/et_tanggal" />
 
-        <Spinner
-            android:id="@+id/spinner_statuspesanan"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@android:drawable/btn_dropdown"
-            android:spinnerMode="dropdown"/>
+            <Spinner
+                android:id="@+id/spinner_shift"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:background="@android:drawable/btn_dropdown"
+                android:spinnerMode="dropdown"
+                app:layout_constraintTop_toBottomOf="@+id/et_waktu" />
 
-        <EditText
-            android:id="@+id/et_kodemeja"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Kode Meja"
-            android:inputType="text" />
+            <ImageView
+                android:id="@+id/imageView6"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:layout_marginTop="15dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/spinner_shift"
+                app:srcCompat="@drawable/customer" />
 
-        <EditText
-            android:id="@+id/et_namapelanggan"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Nama Pelanggan"
-            android:inputType="text" />
+            <TextView
+                android:id="@+id/textView4"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                style="@style/Header"
+                android:text="Input User"
+                android:layout_marginTop="15dp"
+                android:layout_marginLeft="5dp"
+                app:layout_constraintStart_toEndOf="@+id/imageView6"
+                app:layout_constraintTop_toBottomOf="@+id/spinner_shift" />
 
+            <EditText
+                android:id="@+id/et_idpengguna"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                style="@style/Text_Login"
+                android:hint="ID Pengguna"
+                android:inputType="textPassword"
+                app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
-        <EditText
-            android:id="@+id/et_total"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Total"
-            android:inputType="text" />
+            <EditText
+                android:id="@+id/et_idpelanggan"
+                style="@style/Text_Login"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="ID Pelanggan"
+                android:inputType="text"
+                app:layout_constraintTop_toBottomOf="@+id/et_idpengguna" />
 
-        <Spinner
-            android:id="@+id/spinner_metodebayar"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@android:drawable/btn_dropdown"
-            android:spinnerMode="dropdown"/>
+            <Spinner
+                android:id="@+id/spinner_statuspesanan"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:background="@android:drawable/btn_dropdown"
+                android:spinnerMode="dropdown"
+                app:layout_constraintTop_toBottomOf="@+id/et_idpelanggan" />
 
-        <EditText
-            android:id="@+id/et_totaldiskon"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Total Diskon"
-            android:inputType="text" />
+            <ImageView
+                android:id="@+id/imageView7"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginTop="15dp"
+                app:layout_constraintTop_toBottomOf="@+id/spinner_statuspesanan"
+                app:srcCompat="@drawable/pay" />
 
-        <EditText
-            android:id="@+id/et_idpromosi"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="ID Promosi"
-            android:inputType="text" />
+            <TextView
+                android:id="@+id/textView5"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Payment"
+                style="@style/Header"
+                android:layout_marginLeft="5dp"
+                android:layout_marginTop="15dp"
+                app:layout_constraintStart_toEndOf="@+id/imageView7"
+                app:layout_constraintTop_toBottomOf="@+id/spinner_statuspesanan" />
 
-        <Button
-            android:id="@+id/btn_addTransaksi"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:text="Tambah Transaksi" />
+            <EditText
+                android:id="@+id/et_kodemeja"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Kode Meja"
+                style="@style/Text_Login"
+                android:inputType="text"
+                app:layout_constraintTop_toBottomOf="@+id/textView5" />
 
+            <EditText
+                android:id="@+id/et_namapelanggan"
+                style="@style/Text_Login"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Nama Pelanggan"
+                android:inputType="text"
+                app:layout_constraintTop_toBottomOf="@+id/et_kodemeja" />
+
+            <EditText
+                android:id="@+id/et_total"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Total"
+                style="@style/Text_Login"
+                android:inputType="text"
+                app:layout_constraintTop_toBottomOf="@+id/et_namapelanggan" />
+
+            <Spinner
+                android:id="@+id/spinner_metodebayar"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:background="@android:drawable/btn_dropdown"
+                android:spinnerMode="dropdown"
+                app:layout_constraintTop_toBottomOf="@+id/et_total" />
+
+            <ImageView
+                android:id="@+id/imageView8"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:layout_marginTop="15dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/spinner_metodebayar"
+                app:srcCompat="@drawable/diskon" />
+
+            <TextView
+                android:id="@+id/textView6"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                style="@style/Header"
+                android:layout_marginLeft="5dp"
+                android:text="Discount"
+                android:layout_marginTop="15dp"
+                app:layout_constraintStart_toEndOf="@+id/imageView8"
+                app:layout_constraintTop_toBottomOf="@+id/spinner_metodebayar" />
+
+            <EditText
+                android:id="@+id/et_totaldiskon"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Total Diskon"
+                android:inputType="text"
+                style="@style/Text_Login"
+                app:layout_constraintTop_toBottomOf="@+id/textView6" />
+
+            <EditText
+                android:id="@+id/et_idpromosi"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="ID Promosi"
+                style="@style/Text_Login"
+                android:inputType="text"
+                app:layout_constraintTop_toBottomOf="@+id/et_totaldiskon" />
+
+            <Button
+                android:id="@+id/btn_addTransaksi"
+                style="@style/Text_Button"
+                android:layout_width="230dp"
+                android:layout_height="46dp"
+                android:layout_marginTop="50dp"
+                android:text="A D D  T R A S A C T I O N"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/et_idpromosi" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
     </LinearLayout>
 </ScrollView>
