--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="coklat">#422117</color>
     <color name="kuning">#FFBC3D</color>
     <color name="abu">#737373</color>
+    <color name="semi_kuning">#FFE39B</color>
 </resources>
