--- a/app/src/main/res/layout/activity_add_role.xml
+++ b/app/src/main/res/layout/activity_add_role.xml
@@ -1,37 +1,81 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="16dp"
     tools:context=".AddRoleActivity">
 
-    <EditText
-        android:id="@+id/et_idRole"
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="match_parent"
+        android:layout_height="55dp"
+        android:text="Tambah Role"
+        style="@style/Header"
+        android:padding="@dimen/activity_vertical_margin"
+        android:background="@color/kuning" />
+
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="ID Role"
-        android:inputType="number" />
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginRight="20dp">
 
-    <EditText
-        android:id="@+id/et_role"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Role" />
+        <ImageView
+            android:id="@+id/imageView5"
+            android:layout_width="wrap_content"
+            android:layout_height="170dp"
+            app:srcCompat="@drawable/food_2"/>
 
-    <Spinner
-        android:id="@+id/spinner_status"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@android:drawable/btn_dropdown"
-        android:spinnerMode="dropdown"/>
+        <EditText
+            android:id="@+id/et_idRole"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            style="@style/Text_Login"
+            android:hint="ID Role"
+            android:inputType="number"
+            android:layout_marginTop="10dp"
+            app:layout_constraintTop_toBottomOf="@+id/imageView5" />
 
-    <Button
-        android:id="@+id/btn_add"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="Tambah Role" />
+        <EditText
+            android:id="@+id/et_role"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            style="@style/Text_Login"
+            android:hint="Role"
+            app:layout_constraintTop_toBottomOf="@+id/et_idRole" />
 
+        <TextView
+            android:id="@+id/textView9"
+            style="@style/Text_Login"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Choose Status"
+            android:textSize="10dp"
+            android:layout_marginTop="5dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/et_role" />
+
+        <Spinner
+            android:id="@+id/spinner_status"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:background="@android:drawable/btn_dropdown"
+            android:spinnerMode="dropdown"
+            app:layout_constraintTop_toBottomOf="@+id/textView9" />
+
+        <Button
+            android:id="@+id/btn_add"
+            style="@style/Text_Button"
+            android:layout_width="224dp"
+            android:layout_height="46dp"
+            android:layout_marginTop="50dp"
+            android:text="A D D  R O L E"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/spinner_status" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </LinearLayout>
