--- a/app/src/main/res/layout/activity_update_pengguna.xml
+++ b/app/src/main/res/layout/activity_update_pengguna.xml
@@ -1,26 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".UpdatePenggunaActivity">
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="match_parent"
+        android:layout_height="55dp"
+        android:text="Edit Pengguna"
+        style="@style/Header"
+        android:padding="@dimen/activity_vertical_margin"
+        android:background="@color/kuning" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".UpdatePenggunaActivity"
-        android:id="@+id/profpic">
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginRight="20dp">
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/iv_foto"
             android:layout_width="150dp"
             android:layout_height="150dp"
-            android:layout_marginTop="80dp"
             android:src="@drawable/profpic"
-            android:alpha="0.5"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -36,49 +44,65 @@
             app:layout_constraintStart_toStartOf="@id/iv_foto"
             app:layout_constraintTop_toTopOf="@id/iv_foto" />
 
-        <LinearLayout
-            android:layout_width="218dp"
-            android:layout_height="314dp"
-            android:orientation="vertical"
+        <EditText
+            android:id="@+id/et_namaPengguna"
+            style="@style/Text_Login"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="30dp"
+            android:ems="18"
+            android:hint="Name"
+            android:inputType="text"
+            app:layout_constraintTop_toBottomOf="@+id/iv_foto" />
+
+        <TextView
+            android:id="@+id/textView7"
+            style="@style/Text_Login"
+            android:layout_marginTop="5dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Choose Status"
+            android:textSize="10dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/et_namaPengguna" />
+
+        <Spinner
+            android:id="@+id/spinner_status"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:background="@android:drawable/btn_dropdown"
+            android:spinnerMode="dropdown"
+            app:layout_constraintTop_toBottomOf="@+id/textView7" />
+
+        <TextView
+            android:id="@+id/textView8"
+            style="@style/Text_Login"
+            android:layout_marginTop="5dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Choose Role"
+            android:textSize="10dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/spinner_status" />
+
+        <Spinner
+            android:id="@+id/spinner_role"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:background="@android:drawable/btn_dropdown"
+            android:spinnerMode="dropdown"
+            app:layout_constraintTop_toBottomOf="@+id/textView8" />
+
+        <Button
+            android:id="@+id/btn_save"
+            style="@style/Text_Button"
+            android:layout_width="224dp"
+            android:layout_height="46dp"
+            android:text="S A V E"
+            android:layout_marginTop="35dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/iv_foto">
-
-            <EditText
-                android:id="@+id/et_namaPengguna"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="32dp"
-                android:ems="10"
-                android:inputType="text"
-                android:text="Name" />
-
-            <Spinner
-                android:id="@+id/spinner_status"
-                android:layout_width="206dp"
-                android:layout_height="46dp"
-                android:layout_marginTop="20dp"
-                android:background="@android:drawable/btn_dropdown"
-                android:spinnerMode="dropdown" />
-
-            <Spinner
-                android:id="@+id/spinner_role"
-                android:layout_width="206dp"
-                android:layout_height="46dp"
-                android:layout_marginTop="24dp"
-                android:background="@android:drawable/btn_dropdown"
-                android:spinnerMode="dropdown"
-                app:layout_constraintHorizontal_bias="0.497" />
-
-            <Button
-                android:id="@+id/btn_save"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="32dp"
-                android:text="Save" />
-        </LinearLayout>
+            app:layout_constraintTop_toBottomOf="@+id/spinner_role" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
