--- a/app/src/main/res/layout/item_role.xml
+++ b/app/src/main/res/layout/item_role.xml
@@ -2,91 +2,93 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:padding="16dp">
+    android:layout_height="wrap_content">
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/cardView"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="12dp">
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginRight="20dp">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <androidx.cardview.widget.CardView
+            android:id="@+id/cardView"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="12dp">
+            android:layout_height="wrap_content" >
 
-            <TextView
-                android:id="@+id/tv_idRole"
-                android:layout_width="wrap_content"
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="1"
-                android:textSize="40sp"
-                android:textStyle="bold"
-                android:textColor="#000"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                android:layout_marginLeft="12dp"
+                android:layout_marginTop="10dp">
 
+                <de.hdodenhof.circleimageview.CircleImageView
+                    android:id="@+id/iv_foto"
+                    android:layout_width="53dp"
+                    android:layout_height="46dp"
+                    android:layout_marginLeft="7dp"
+                    android:layout_marginTop="3dp"
+                    android:src="@drawable/number"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
 
-            <TextView
-                android:id="@+id/tvRole"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="30dp"
-                android:text="Nama Role"
-                android:textColor="#000"
-                android:textSize="18sp"
-                android:textStyle="bold"
-                app:layout_constraintStart_toEndOf="@+id/tv_idRole"
-                app:layout_constraintTop_toTopOf="parent" />
+                <TextView
+                    android:id="@+id/tv_idRole"
+                    style="@style/Header"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="1"
+                    android:textSize="25sp"
+                    app:layout_constraintBottom_toBottomOf="@+id/iv_foto"
+                    app:layout_constraintEnd_toEndOf="@+id/iv_foto"
+                    app:layout_constraintStart_toStartOf="@+id/iv_foto"
+                    app:layout_constraintTop_toTopOf="@+id/iv_foto" />
 
-            <TextView
-                android:id="@+id/tvStatus"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="30dp"
-                android:text="Status"
-                app:layout_constraintStart_toEndOf="@+id/tv_idRole"
-                app:layout_constraintTop_toBottomOf="@+id/tvRole" />
+                <TextView
+                    android:id="@+id/tvRole"
+                    style="@style/Header"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginTop="3dp"
+                    android:text="Nama Role"
+                    app:layout_constraintStart_toEndOf="@+id/iv_foto"
+                    app:layout_constraintTop_toTopOf="@+id/iv_foto" />
 
-            <!-- Tombol Edit -->
-<!--            <ImageView-->
-<!--                android:id="@+id/btnEdit"-->
-<!--                android:layout_width="wrap_content"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:src="@drawable/icon_edit"-->
-<!--                app:layout_constraintEnd_toStartOf="@+id/btnDelete"-->
-<!--                app:layout_constraintTop_toTopOf="parent"/>-->
+                <TextView
+                    android:id="@+id/tvStatus"
+                    style="@style/Text_Login"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:text="Status"
+                    app:layout_constraintStart_toEndOf="@+id/iv_foto"
+                    app:layout_constraintTop_toBottomOf="@+id/tvRole" />
 
+                <!-- Tombol Edit -->
+                <ImageView
+                    android:id="@+id/btnEdit"
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:layout_marginLeft="215dp"
+                    android:layout_marginTop="3dp"
+                    app:layout_constraintStart_toEndOf="@+id/iv_foto"
+                    app:layout_constraintTop_toTopOf="@+id/iv_foto"
+                    app:srcCompat="@drawable/edit" />
 
-<!--            &lt;!&ndash; Tombol Delete &ndash;&gt;-->
-<!--            <ImageView-->
-<!--                android:id="@+id/btnDelete"-->
-<!--                android:layout_width="wrap_content"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:src="@drawable/icon_delete"-->
-<!--                app:layout_constraintEnd_toEndOf="parent"-->
-<!--                app:layout_constraintTop_toTopOf="parent"/>-->
-            <ImageView
-                android:id="@+id/btnEdit"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="276dp"
-                android:src="@drawable/icon_edit"
-                app:layout_constraintStart_toEndOf="@+id/tv_idRole"
-                app:layout_constraintTop_toTopOf="@+id/tv_idRole" />
+                <ImageView
+                    android:id="@+id/btnDelete"
+                    android:layout_width="27dp"
+                    android:layout_height="27dp"
+                    android:layout_marginLeft="5dp"
+                    app:layout_constraintStart_toEndOf="@+id/btnEdit"
+                    app:layout_constraintTop_toTopOf="@+id/btnEdit"
+                    app:srcCompat="@drawable/delete" />
 
-            <ImageView
-                android:id="@+id/btnDelete"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:src="@drawable/icon_delete"
-                app:layout_constraintStart_toEndOf="@+id/btnEdit"
-                app:layout_constraintTop_toTopOf="@+id/tv_idRole" />
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-    </androidx.cardview.widget.CardView>
+            </androidx.constraintlayout.widget.ConstraintLayout>
+        </androidx.cardview.widget.CardView>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </LinearLayout>
