--- a/app/src/main/res/layout/pengguna_row.xml
+++ b/app/src/main/res/layout/pengguna_row.xml
@@ -2,102 +2,99 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:id="@+id/mainLayout">
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/cardView"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="12dp">
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginRight="20dp">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <androidx.cardview.widget.CardView
+            android:id="@+id/cardView"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="12dp">
+            android:layout_height="wrap_content" >
 
-<!--            <TextView-->
-<!--                android:id="@+id/tv_idPengguna"-->
-<!--                android:layout_width="wrap_content"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:text="1"-->
-<!--                android:textSize="40sp"-->
-<!--                android:textStyle="bold"-->
-<!--                android:textColor="#000"-->
-<!--                app:layout_constraintBottom_toBottomOf="parent"-->
-<!--                app:layout_constraintStart_toStartOf="parent"-->
-<!--                app:layout_constraintTop_toTopOf="parent" />-->
-
-            <de.hdodenhof.circleimageview.CircleImageView
-                android:id="@+id/iv_foto"
-                android:layout_width="53dp"
-                android:layout_height="46dp"
-                android:src="@drawable/profpic"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <TextView
-                android:id="@+id/tv_namaPengguna"
-                android:layout_width="wrap_content"
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:text="Nama Pengguna"
-                android:textColor="#000"
-                android:textSize="20sp"
-                android:textStyle="bold"
-                android:ellipsize="end"
-                android:maxLines="1"
-                app:layout_constraintStart_toEndOf="@+id/iv_foto"
-                app:layout_constraintTop_toTopOf="@+id/iv_foto" />
+                android:layout_marginLeft="12dp"
+                android:layout_marginTop="15dp" >
 
-            <TextView
-                android:id="@+id/tv_role"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Role"
-                app:layout_constraintStart_toStartOf="@+id/tv_namaPengguna"
-                app:layout_constraintTop_toBottomOf="@+id/tv_namaPengguna" />
+                <de.hdodenhof.circleimageview.CircleImageView
+                    android:id="@+id/iv_foto"
+                    android:layout_width="53dp"
+                    android:layout_height="46dp"
+                    android:src="@drawable/profpic"
+                    android:layout_marginLeft="7dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
 
-            <TextView
-                android:id="@+id/pembatas"
-                android:layout_width="5dp"
-                android:layout_height="16dp"
-                android:layout_marginStart="4dp"
-                android:text="|"
-                app:layout_constraintEnd_toStartOf="@+id/tv_status"
-                app:layout_constraintStart_toEndOf="@+id/tv_role"
-                app:layout_constraintTop_toBottomOf="@+id/tv_namaPengguna" />
+                <TextView
+                    android:id="@+id/tv_namaPengguna"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="8dp"
+                    style="@style/Header"
+                    android:text="Nama Pengguna"
+                    android:ellipsize="end"
+                    android:maxLines="1"
+                    app:layout_constraintStart_toEndOf="@+id/iv_foto"
+                    app:layout_constraintTop_toTopOf="@+id/iv_foto" />
 
-            <TextView
-                android:id="@+id/tv_status"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="4dp"
-                android:text="Status"
-                app:layout_constraintStart_toEndOf="@+id/pembatas"
-                app:layout_constraintTop_toBottomOf="@+id/tv_namaPengguna" />
+                <TextView
+                    android:id="@+id/tv_role"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    style="@style/Text_Login"
+                    android:text="Role"
+                    app:layout_constraintStart_toStartOf="@+id/tv_namaPengguna"
+                    app:layout_constraintTop_toBottomOf="@+id/tv_namaPengguna" />
 
-            <!-- Tombol Delete -->
+                <TextView
+                    android:id="@+id/tv_status"
+                    style="@style/Text_Login"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Status"
+                    android:layout_marginLeft="5dp"
+                    app:layout_constraintStart_toEndOf="@+id/divider"
+                    app:layout_constraintTop_toBottomOf="@+id/tv_namaPengguna" />
 
-            <ImageView
-                android:id="@+id/btn_edit"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="276dp"
-                android:src="@drawable/icon_edit"
-                app:layout_constraintStart_toEndOf="@+id/iv_foto"
-                app:layout_constraintTop_toTopOf="@+id/iv_foto" />
+                <!-- Tombol Delete -->
+                <View
+                    android:id="@+id/divider"
+                    android:layout_width="1dp"
+                    android:layout_height="20dp"
+                    android:layout_marginLeft="5dp"
+                    android:background="@color/black"
+                    app:layout_constraintStart_toEndOf="@+id/tv_role"
+                    app:layout_constraintTop_toBottomOf="@+id/tv_namaPengguna" />
 
-            <ImageView
-                android:id="@+id/btn_delete"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:src="@drawable/icon_delete"
-                app:layout_constraintStart_toEndOf="@+id/btn_edit"
-                app:layout_constraintTop_toTopOf="@+id/iv_foto" />
-        </androidx.constraintlayout.widget.ConstraintLayout>
-    </androidx.cardview.widget.CardView>
+                <ImageView
+                    android:id="@+id/btn_edit"
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:layout_marginLeft="215dp"
+                    app:layout_constraintStart_toEndOf="@+id/iv_foto"
+                    app:layout_constraintTop_toTopOf="@+id/iv_foto"
+                    app:srcCompat="@drawable/edit" />
+
+                <ImageView
+                    android:id="@+id/btn_delete"
+                    android:layout_width="27dp"
+                    android:layout_height="27dp"
+                    android:layout_marginLeft="5dp"
+                    app:layout_constraintStart_toEndOf="@+id/btn_edit"
+                    app:layout_constraintTop_toTopOf="@+id/btn_edit"
+                    app:srcCompat="@drawable/delete" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+        </androidx.cardview.widget.CardView>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </LinearLayout>
