filter tanggal shift

--- a/app/src/main/res/layout/fragment_shift1.xml
+++ b/app/src/main/res/layout/fragment_shift1.xml
@@ -13,17 +13,28 @@
         android:layout_marginTop="20dp"
         android:layout_marginRight="18dp">
 
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/btnOpenDatePicker"
+            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="4dp"
+            android:layout_marginTop="4dp"
+            android:text="Pilih Tanggal"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerViewTransaksi1"
             android:layout_width="409dp"
             android:layout_height="729dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.484"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:listitem="@layout/item_transaksi"/>
-
-
+            app:layout_constraintTop_toBottomOf="@+id/btnOpenDatePicker"
+            app:layout_constraintVertical_bias="0.0"
+            tools:listitem="@layout/item_transaksi" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </FrameLayout>
