--- a/app/src/main/res/layout/activity_edit_role.xml
+++ b/app/src/main/res/layout/activity_edit_role.xml
@@ -35,7 +35,7 @@
             android:layout_height="wrap_content"
             style="@style/Text_Login"
             android:hint="Role Name"
-            android:inputType="number"
+            android:inputType="text"
             android:layout_marginTop="10dp"
             app:layout_constraintTop_toBottomOf="@+id/imageView5" />
 
