--- a/app/src/main/res/layout/fragment_shift2.xml
+++ b/app/src/main/res/layout/fragment_shift2.xml
@@ -30,8 +30,10 @@
             android:layout_height="729dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.484"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/btnOpenDatePicker2"
+            app:layout_constraintVertical_bias="0.0"
             tools:listitem="@layout/item_transaksi" />
 
 
